added filtering to script.js

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 <body>
     <h1>Nintendo Tracker says "Hello World"</h1>
-    
+    <input id="gameSearch" type="text">
+    <button id="searchButton">Search games</button>
+    <h2 id="gameInfo">Game Info</h2>
+    <img id="gameImage" src="" alt="">
+
 </body>
+<script src="/assets/js/script.js"></script>
 </html>
+
