added jumbotron and testing card

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap Stylesheet Link -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <!-- Pretendo font -->
+    <link rel="stylesheet" href="/public/assets/fonts/Pretendo.ttf">
+    <!-- Custom Stylesheet Link -->
+    <link href="/public/assets/css/style.css" rel="stylesheet">
+
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Nintendo Tracker says "Hello World"</h1>
-    
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-3">Nintendo Tracker says "Hello World"</h1>
+            <p class="lead">Search for Nintendo games!</p>
+            <hr class="my-2">
+            <p>More info</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Click here!</a>
+            </p>
+        </div>
+
+    </div>
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img id="" src="..." class="card-img" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Game Title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Most recent console release</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    <footer>
+
+
+    </footer>
 </body>
+
 </html>
