--- a/public/index.html
+++ b/public/index.html
@@ -2,68 +2,71 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-=======
-    <!-- Bootstrap Stylesheet Link -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-    <!-- Pretendo font -->
-    <link rel="stylesheet" href="/public/assets/fonts/Pretendo.ttf">
-    <!-- Custom Stylesheet Link -->
-    <link href="/public/assets/css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
->>>>>>> 8c8fd6f2f944e14bf2dd7448c9886a8f35822022
-    <title>Document</title>
+  <!-- Bootstrap Stylesheet Link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+  <!-- Pretendo font -->
+  <!-- <link rel="stylesheet" href="/public/assets/fonts/Pretendo.ttf"> -->
+
+  <!-- Custom Stylesheet Link -->
+  <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
+
+  <title>Nintendo Tracker</title>
 </head>
 
 <body>
-<<<<<<< HEAD
-    <h1>Nintendo Tracker says "Hello World"</h1>
-    <input id="gameSearch" type="text">
-    <button id="searchButton">Search games</button>
-    <h2 id="gameInfo">Game Info</h2>
-    <img id="gameImage" src="" alt="">
-
-</body>
-<script src="/assets/js/script.js"></script>
-</html>
-
-=======
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-3">Nintendo Tracker says "Hello World"</h1>
-            <p class="lead">Search for Nintendo games!</p>
-            <hr class="my-2">
-            <p>More info</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Click here!</a>
-            </p>
-        </div>
-
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-3">Nintendo Tracker says "Hello World"</h1>
+      <p class="lead">Search for Nintendo games!</p>
+      <hr class="my-2">
+      <p>More info</p>
+      <input id="gameSearch" type="text">
+      <button id="searchButton">Search games</button>
+      <p class="lead">
+        <a class="btn btn-lg btn-danger" href="Jumbo action link" role="button">Click here!</a>
+      </p>
     </div>
-    <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img id="" src="..." class="card-img" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Game Title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Most recent console release</small></p>
-            </div>
-          </div>
+
+  </div>
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img id="gameImage" src="..." class="card-img" width="100" height="100">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 id="gameTitle" class="card-title ">Game Title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+            content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Most recent console release</small></p>
         </div>
       </div>
+    </div>
+  </div>
 
 
-    <footer>
+  <footer>
 
 
-    </footer>
+  </footer>
 </body>
 
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+<!-- Custom JS -->
+<script src="/assets/js/script.js"></script>
+
 </html>
->>>>>>> 8c8fd6f2f944e14bf2dd7448c9886a8f35822022
