--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
       <h1 class="display-3">Nintendo Tracker says "Hello World"</h1>
       <p class="lead">Search for Nintendo games!</p>
       <hr class="my-2">
-      <p>More info</p>
-      <input id="gameSearch" type="text">
+      <label for="gameSearch">Search for a game below</label>
+      <input class="form-control" id="gameSearch" placeholder="Super Mario Bros.">
       <p class="lead">
         <a id="searchButton" class="btn btn-lg btn-primary" role="button">Search games!</a>
       </p>
@@ -36,13 +36,15 @@
     <div class="row no-gutters">
       <div class="col-md-4">
         <img id="gameImage" src="..." class="card-img-top" width="100" height="100">
+        <button id="gameSave" type="submit" class="btn btn-lg btn-success">Save</button>
       </div>
       <div class="col-md-8">
         <div class="card-body">
           <h5 id="gameTitle" class="card-title">Game Title</h5>
-          <p id="score" class="card-text">Metacritic Score: 98/100</p>
+          <p id="score" class="card-text">Metacritic Score: placeholder</p>
           <p id="originalCon" class="card-text">Originally released on: placeholder</p>
           <p id="recentCon" class="card-text">Most recent console: placeholder</p>
+          <p id="releaseDate" class="card-text">Release Date: placeholder</p>
           <p id="genres" class="card-text">Genres:</p>
         </div>
       </div>
@@ -52,7 +54,7 @@
 
   <footer>
     <div class="card-body">
-      Powered by RAWG API
+      Powered by <a href="https://rawg.io/apidocs">RAWG API</a>
       <br>
       Click <a href="https://github.com/AndrewCodesDontYaKnow/NintendoTracker">here</a> to view the source code on
       Github.
