--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Log In</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap Stylesheet Link -->
@@ -20,25 +20,37 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
-        <form class="login">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default">Login</button>
-        </form>
-        <br />
-        <p>Or sign up <a href="/">here</a></p>
+      <div class="col-md-12">
+        <div class="jumbotron">
+          <h1 class="display-4">Log into Nintendo Tracker</h1>
+          <form class="login">
+            <div class="form-group">
+              <label for="email-input">Email address</label>
+              <input type="email" class="form-control" id="email-input" placeholder="email@email.com">
+            </div>
+            <div class="form-group">
+              <label for="password-input">Password</label>
+              <input type="password" class="form-control" id="password-input" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-lg btn-success">Login</button>
+          </form>
+          <br />
+          <p>Or sign up <a href="/">here</a></p>
+          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <hr class="my-4">
+          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        </div>
       </div>
     </div>
   </div>
-
+  <footer>
+    <div class="card-body">
+      Powered by <a href="https://rawg.io/apidocs">RAWG API</a>
+      <br>
+      Click <a href="https://github.com/AndrewCodesDontYaKnow/NintendoTracker">here</a> to view the source code on
+      Github.
+    </div>
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
 
