--- a/public/login.html
+++ b/public/login.html
@@ -35,10 +35,7 @@
             <button type="submit" class="btn btn-lg btn-success">Login</button>
           </form>
           <br />
-          <p>Or sign up <a href="/">here</a></p>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-          <hr class="my-4">
-          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+          <p>Or sign up <a href="/signup">here</a></p>
         </div>
       </div>
     </div>
