--- a/public/members.html
+++ b/public/members.html
@@ -2,34 +2,83 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap Stylesheet Link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+  <!-- Pretendo font -->
+  <!-- <link rel="stylesheet" href="/public/assets/fonts/Pretendo.ttf"> -->
+
+  <!-- Custom Stylesheet Link -->
+  <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
+
+  <title>Nintendo Tracker</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand">Nintendo Tracker</a>
+    <form class="form-inline">
+      <input class="form-control" id="gameSearch" placeholder="Super Mario Bros.">
+      <p class="lead">
+        <a id="searchButton" class="btn btn-lg btn-primary" role="button">Search games!</a>
+      </p>
+    </form>
+  </nav>
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
-    </div>
-  </div>
-</nav>
-  <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
+      <div class="card col-4 list-container" style="width: 18rem;">
+        <div class="card-header">
+          Saved Games
+        </div>
+        <ul class="list-group list-group-flush savedGames">
+          <li class="list-group-item">Saved Game 1</li>
+          <li class="list-group-item">Saved Game 2</li>
+          <li class="list-group-item">Saved Game 3</li>
+        </ul>
+      </div>
+      <div class="jumbotron-fluid" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <!-- <div class="col-md-6 col-md-offset-3">
+            <h2>Welcome <span class="member-name"></span></h2>
+          </div> -->
+          <div class="col-md-4">
+            <!-- add to image if needed width="100" height="100" -->
+            <img id="gameImage" src="" class="card-img-top">
+            <button id="gameSave" type="submit" class="btn btn-lg btn-success">Save</button>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 id="gameTitle" class="card-title"></h5>
+              <p id="score" class="card-text"></p>
+              <p id="originalCon" class="card-text"></p>
+              <p id="recentCon" class="card-text"></p>
+              <p id="releaseDate" class="card-text"></p>
+              <p id="genres" class="card-text"></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
-
+  <footer>
+    <div class="footer card-body">
+      Powered by <a href="https://rawg.io/apidocs">RAWG API</a>
+      <br>
+      Click <a href="https://github.com/AndrewCodesDontYaKnow/NintendoTracker">here</a> to view the source code on
+      Github.
+    </div>
+  </footer>
 </body>
+
+<!-- jQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Custom JS -->
+<script type="text/javascript" src="/assets/js/script.js"></script>
+<script type="text/javascript" src="js/members.js"></script>
 
 </html>
