render saved games to page on page load and on save

--- a/public/members.html
+++ b/public/members.html
@@ -34,10 +34,7 @@
         <div class="card-header">
           Saved Games
         </div>
-        <ul class="list-group list-group-flush savedGames">
-          <li class="list-group-item">Saved Game 1</li>
-          <li class="list-group-item">Saved Game 2</li>
-          <li class="list-group-item">Saved Game 3</li>
+        <ul id="savedGames" class="list-group list-group-flush savedGames">
         </ul>
       </div>
       <div class="jumbotron-fluid" style="max-width: 540px;">
