comment and clean up code in script.js

--- a/public/members.html
+++ b/public/members.html
@@ -13,7 +13,7 @@
   <!-- <link rel="stylesheet" href="/public/assets/fonts/Pretendo.ttf"> -->
 
   <!-- Custom Stylesheet Link -->
-  <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
+  <link href="./assets/css/styles.css" rel="stylesheet">
 
   <title>Nintendo Tracker</title>
 </head>
