--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap Stylesheet Link -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <!-- Custom Stylesheet Link -->
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <link href="./assets/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
