updated landing page with bootstrap design

--- a/public/members.html
+++ b/public/members.html
@@ -34,8 +34,8 @@
         <div class="card-header">
           Saved Games
         </div>
-        <ul id="savedGames" class="list-group list-group-flush savedGames">
-        </ul>
+        <li id="savedGames" class="list-group list-group-flush savedGames">
+        </li>
       </div>
       <div class="jumbotron-fluid" style="max-width: 540px;">
         <div class="row no-gutters">
