--- a/public/login.html
+++ b/public/login.html
@@ -5,10 +5,10 @@
   <title>Log In</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap Stylesheet Link -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+  <!-- Bootstrap Stylesheet Links -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!-- Custom Stylesheet Link -->
-  <link href="./assets/css/styles.css" rel="stylesheet">
+  <link href="/assets/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
-
+  <script type="text/javascript" src="js/signup.js"></script>
 </body>
 
 </html>
